--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "angular2-ts-starter-kit",
-  "version": "2.0.0-rc",
+  "name": "angular2-custom-validation",
+  "version": "1.0.0",
   "description": "Angular 2.X starter kit",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/AntJanus/angular2-ts-starter-kit.git"
+    "url": "git+https://github.com/QubizSolutions/angular2-custom-validation.git"
   },
-  "author": "Antonin Januska @antjanus",
+  "author": "Szilard Vigh",
   "bugs": {
     "url": "https://github.com/AntJanus/angular2-ts-starter-kit/issues"
   },
@@ -15,23 +15,21 @@
   },
   "homepage": "https://github.com/AntJanus/angular2-ts-starter-kit#readme",
   "dependencies": {
-    "@angular/common": "2.4.5",
-    "@angular/compiler": "2.4.5",
-    "@angular/core": "2.4.5",
-    "@angular/forms": "2.4.5",
-    "@angular/http": "2.4.5",
-    "@angular/platform-browser": "2.4.5",
-    "@angular/platform-browser-dynamic": "2.4.5",
-    "@angular/router": "3.4.5",
-    "@angular/router-deprecated": "2.0.0-rc.2",
-    "@angular/upgrade": "2.4.5",
+    "@angular/common": "4.0.3",
+    "@angular/compiler": "4.0.3",
+    "@angular/core": "4.0.3",
+    "@angular/forms": "4.0.3",
+    "@angular/http": "4.0.3",
+    "@angular/platform-browser": "4.0.3",
+    "@angular/platform-browser-dynamic": "4.0.3",
+    "@angular/router": "4.0.3",
+    "@angular/upgrade": "4.0.3",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.22",
-    "angular2-infinite-scroll": "^0.3.42",
     "core-js": "2.4.1",
     "ngx-infinite-scroll": "^0.4.1",
     "reflect-metadata": "^0.1.9",
     "rxjs": "5.0.3",
-    "zone.js": "^0.7.6"
+    "zone.js": "^0.8.4"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
