--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/upgrade": "4.0.3",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.22",
     "core-js": "2.4.1",
+    "ngx-bootstrap": "^1.6.6",
     "ngx-infinite-scroll": "^0.4.1",
     "reflect-metadata": "^0.1.9",
     "rxjs": "5.0.3",
